--- a/SimpleWeatherForecast/src/main/AndroidManifest.xml
+++ b/SimpleWeatherForecast/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
