--- a/SimpleWeatherForecast/src/main/AndroidManifest.xml
+++ b/SimpleWeatherForecast/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <activity
-            android:name="fr.tvbarthel.apps.billing.SupportActivity"
+            android:name="fr.tvbarthel.apps.simpleweatherforcast.SupportActivity"
             android:icon="@drawable/ic_action_support"
             android:label="@string/app_name"
             android:parentActivityName=".MainActivity"
