--- a/SimpleWeatherForecast/src/main/AndroidManifest.xml
+++ b/SimpleWeatherForecast/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
             android:label="@string/app_name"
             android:theme="@style/SupportTheme" />
 
-        <receiver android:name=".receivers.WeatherWidgetReceiver">
+        <receiver
+            android:name=".receivers.WeatherWidgetReceiver"
+            android:enabled="@bool/remote_views_service_supported">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -46,8 +48,9 @@
 
         <service
             android:name=".services.AppWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"
-            android:exported="false"/>
+            android:enabled="@bool/remote_views_service_supported"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 
