Change the directories for test results and test reports

--- a/SimpleWeatherForecast/build.gradle
+++ b/SimpleWeatherForecast/build.gradle
@@ -34,6 +34,11 @@ android {
     packagingOptions {
         exclude 'LICENSE.txt'
     }
+
+    testOptions {
+        resultsDir = "$project.rootDir/TestOutput/results"
+        reportDir ="$project.rootDir/TestOutput/reports"
+    }
 }
 
 dependencies {
